<resources>
    <string name="app_name">StartActivityForResult Demo</string>
    <string name="open_second_activity">Open Second Activity</string>
    <string name="no_result_yet">No result yet</string>
    <string name="main_activity">Main Activity</string>
    <string name="enter_a_message_to_send_back">Enter a message to send back</string>
    <string name="send_result">Send Result</string>
    <string name="cancel">Cancel</string>
    <string name="second_activity">Second Activity</string>
    <string name="user_info_will_appear_here">User info will appear here</string>
</resources>